[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://levels/menu/disclaimer_screen.gd" id="1_disclaimer_script"]
[ext_resource type="PackedScene" uid="uid://bxjrvr1ri8lfh" path="res://levels/menu/main_menu.tscn" id="2_main_menu"]
[ext_resource type="Texture2D" uid="uid://cqt3na311ltmq" path="res://levels/menu/MainMenuBackground.png" id="3_menu_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_content"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.01, 0.03, 0.08, 0.48)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.45)
shadow_size = 36
shadow_offset = Vector2(0, 10)
anti_aliasing = true
anti_aliasing_size = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_text"]
bg_color = Color(0.01, 0.04, 0.09, 0.34)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
anti_aliasing = true
anti_aliasing_size = 1.0

[node name="DisclaimerScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_disclaimer_script")
main_menu_scene = ExtResource("2_main_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_menu_bg")
expand_mode = 1
stretch_mode = 5

[node name="AtmosphereGlow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.56
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.4, 0.94, 0.24)

[node name="Vignette" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.32)

[node name="BackdropTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.01, 0.03, 0.08, 0.75)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 20.0
offset_right = -24.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_content")

[node name="Margin" type="MarginContainer" parent="CenterContainer/Content"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Content/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/Content/Margin/VBox"]
layout_mode = 2
text = "Перед началом игры"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/Content/Margin/VBox"]
layout_mode = 2
text = "Пожалуйста, ознакомьтесь с информацией перед началом."
horizontal_alignment = 1

[node name="TextPlate" type="PanelContainer" parent="CenterContainer/Content/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_text")

[node name="TextMargin" type="MarginContainer" parent="CenterContainer/Content/Margin/VBox/TextPlate"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="DisclaimerText" type="RichTextLabel" parent="CenterContainer/Content/Margin/VBox/TextPlate/TextMargin"]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = false
fit_content = false
scroll_active = false
scroll_following = false
scroll_visible = false
autowrap_mode = 3
shortcut_keys_enabled = false
text = ""
